# oxideav-g7231

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: fuzz.yml
benches/: decode.rs  encode.rs  roundtrip.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: bitstream.rs  decode.rs  params.rs  roundtrip.rs
fuzz/seeds/bitstream/: acelp_alt_pattern  acelp_no_trunc_lsp  acelp_trunc_each  acelp_trunc_gain  mpmlq_chain_many  mpmlq_fcb_allones  mpmlq_no_trunc_lsp  mpmlq_trunc_lag
fuzz/seeds/decode/: all_high  all_low  alt_pattern  erasure_run  mixed_all_rates  saturated_fields  sid_then_voiced
fuzz/seeds/params/: mute_floor  ok_acelp_edge_high  ok_acelp_edge_low  ok_acelp_sid_run  ok_default_rate  ok_mpmlq_edge_high  ok_mpmlq_edge_low  ok_mpmlq_erasure_decay  reject_band_edges  reject_band_edges2  reject_br0_reset  reject_f32  reject_sr_16k  reject_stereo
fuzz/seeds/roundtrip/: acelp_imax_flush  acelp_ramp  acelp_silence  acelp_sine_flush  mpmlq_imin  mpmlq_sine  mpmlq_square_reverse
src/: bitreader.rs  encoder.rs  header.rs  itu_tables.rs  lib.rs  spec_tables.rs  synthesis.rs  tables.rs
tables/: README.md  bit-allocation-segment-base.csv  bit-allocation-segment-boundaries.csv  gain-quantizer-decision-factors.csv  highpass-filter-constants-Q15.csv  lpc-bandwidth-expansion-Q15.csv  lpc-binomial-lag-window-Q15.csv  lpc-hamming-window-Q15.csv  lpc-lsp-cosine-lookup-Q15.csv  lsp-band-info.csv  lsp-dc-predicted-frequencies-Q15.csv  mp-mlq-max-position-table.csv  perceptual-weighting-pole-coefficients-Q15.csv  perceptual-weighting-zero-coefficients-Q15.csv  postfilter-pole-coefficients-Q15.csv  postfilter-zero-coefficients-Q15.csv
tests/: codec_roundtrip.rs  registers_via_distributed_slice.rs
