# cargo-fuzz manifest for the oxideav-g7231 decoder attacker surface.
#
# Round 236 depth-mode lane. The codec landed bench coverage in
# round 203 (`crates/oxideav-g7231/benches/{encode,decode,roundtrip}.rs`)
# and finished the spec-shape audio-quality work in rounds 211 / 216 /
# 222 / 229 (pitch postfilter, LSP stability, frame-erasure
# concealment, formant tilt + AGC). The remaining depth-mode lane
# without coverage is libFuzzer on the public decoder trait surface.
#
# Spec basis for the targets: ITU-T G.723.1 Recommendation §3.7 (rate
# discriminator decoding), §3.9 (postfilter + AGC steady-state), and
# §3.10.2 (frame-erasure concealment). The harness drives
# `oxideav_g7231::register_codecs` + the registered `Decoder` trait
# object via attacker-supplied bytes; the contract under test is
# panic-freedom on every public entry, irrespective of input shape.

[package]
name = "oxideav-g7231-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
oxideav-core = "0.1"

[dependencies.oxideav-g7231]
path = ".."

# Self-contained workspace so the umbrella's `crates/*` member glob
# (one level deep — this manifest is two levels deep and would not
# match anyway) cannot pull this package in.
[workspace]
members = ["."]

[profile.release]
debug = 1

# ------------------------------------------------------------------
# Fuzz targets.
# ------------------------------------------------------------------

# Target 1 — `decode`. Single libfuzzer entry that drives
# attacker-controlled bytes through `Decoder::send_packet` on a
# freshly registered G.723.1 decoder, splitting the input into
# multiple variable-length packets so the cross-packet state machine
# (pending queue, next_pts advance, drained flag, internal
# SynthesisState, frame-erasure run counter) is exercised across a
# mixed sequence of rate-discriminator branches (00 high / 01 low /
# 10 SID / 11 untransmitted). Also exercises `flush()`, `reset()`,
# and a forced double-flush so the post-flush `Eof` path is covered.
[[bin]]
name = "decode"
path = "fuzz_targets/decode.rs"
test = false
doc = false

# Target 2 — `roundtrip`. Closed-loop encode→decode fuzzer. Drives
# attacker-supplied 16-bit PCM through the registered `Encoder` at a
# fuzzer-chosen rate (6.3 MP-MLQ / 5.3 ACELP), exercising the analysis
# path (autocorrelation, Levinson-Durbin, Chebyshev LSP root-finding,
# closed-loop pitch + FCB search, joint-gain quant, §2.2 frame
# assembly) on PCM the bench harness never feeds it (full-scale square
# waves, all-i16::MIN blocks, ramps). Every packet the encoder emits is
# then routed back through the `Decoder`, so self-produced bitstreams
# must also survive parse + synthesis. Covers mid-stream + idempotent
# `flush()` and reverse-order packet delivery.
[[bin]]
name = "roundtrip"
path = "fuzz_targets/roundtrip.rs"
test = false
doc = false

# Target 3 — `bitstream`. Structured adversarial fuzzer for the
# bitstream parser below the trait surface. Constructs structurally
# near-legal frames (correct length + rate byte) then surgically
# corrupts one field (LSP split index, abs/delta lag, gain word, FCB
# pulse word, MP-MLQ reserved tail) or truncates the payload at an
# exact field boundary, probing the `BitReader::read_u32` out-of-bits
# guard on sub-byte remainders. Drives `header::parse_frame_type`, a
# direct field-shaped `BitReader` schedule, the stateless
# `decode_{acelp,mpmlq}_local` per-rate decoders, and a chained
# `Decoder::send_packet` sequence so field corruption is also seen by
# the cross-frame postfilter + erasure state.
[[bin]]
name = "bitstream"
path = "fuzz_targets/bitstream.rs"
test = false
doc = false

# Target 4 — `params`. Parameter-validation fuzzer for the codec
# factories. The other three targets build their codec from a fixed,
# spec-legal `CodecParameters`, so the validation branches in
# `encoder::make_encoder` (wrong sample rate / non-mono / non-S16 /
# out-of-band bit rate) and the bit-rate→mode acceptance-window edges
# are never reached. This target drives `make_encoder` / `make_decoder`
# across a wide parameter ladder (band edges 5000/5600/6000/6500 ±1,
# rejected sample rates / formats / channel counts) and then drives a
# successfully-built decoder through a sustained SID / untransmitted
# erasure run interleaved with valid frames and `reset()`, walking the
# §3.10.2 attenuation-and-mute concealment state machine through its
# full decay→recovery→re-seed cycle.
[[bin]]
name = "params"
path = "fuzz_targets/params.rs"
test = false
doc = false
